--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
     "axios": "^0.19.0",
+    "convert-units": "^2.3.4",
     "expo": "^35.0.0",
     "expo-linear-gradient": "^7.0.1",
     "npm": "^6.12.0",
