--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.3.0",
     "react-native-swipe-list-view": "^2.0.3",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-native-webview": "^7.4.2",
